--- a/FINAL.Rmd
+++ b/FINAL.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Survival Final"
+title: "Survival Analysis of Breastfeeding / Smoking"
 author: "Christopher Park"
 date: "May 13, 2019"
 output:
